--- a/styles.css
+++ b/styles.css
@@ -424,3 +424,18 @@ input:focus, select:focus, .select:focus, .input-area:focus {
     border-right: 1px solid #333;
   }
 }
+
+/* Spinner */
+.spinner {
+  width: 30px;
+  height: 30px;
+  border: 3px solid rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+  border-top-color: var(--brand-1);
+  animation: spin 1s ease-in-out infinite;
+  margin: 0 auto;
+}
+
+@keyframes spin {
+  to { transform: rotate(360deg); }
+}
